@@ -2158,12 +2158,11 @@ config \(optional\): Runtime pool configuration json.
 if NULL, then default config will be used. Example:
 ```
 {
-    "refresh_on_open": bool (optional), Forces pool ledger to be refreshed immediately after opening.
-                     Defaults to true.
-    "auto_refresh_time": int (optional), After this time in minutes pool ledger will be automatically refreshed.
-                       Use 0 to disable automatic refresh. Defaults to 24*60.
-    "network_timeout": int (optional), Network timeout for communication with nodes in milliseconds.
-                      Defaults to 20000.
+    "timeout": int (optional), timeout for network request (in sec).
+    "extended_timeout": int (optional), extended timeout for network request (in sec).
+    "preordered_nodes": array<string> -  (optional), names of nodes which will have a priority during request sending:
+            [ "name_of_1st_prior_node",  "name_of_2nd_prior_node", .... ]
+            Note: Not specified nodes will be placed in a random way.
 }
 ````
 
